--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
@@ -72,3 +72,13 @@
 .panel-body {
   padding-top: 30px !important;
 }
+
+
+/* Personalizacion del File Inut */
+.custom-file-control:lang(en)::after {
+  content: "Selecciona el archivo ...";
+}
+
+.custom-file-control:lang(en)::before {
+  content: "Buscar";
+}
