--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -52,7 +52,7 @@
             <div class="form-group">
               <select #idTipoDocumento="ngModel" class="form-control" name="idTipoDocumento" id="idTipoDocumento" required
                     ngControl="idTipoDocumento" [(ngModel)]="comunicacion.idTipoDocumento" (change)="getCodigoCorrespondencia()" >
-                  <option value="0">Tipo de comunicación </option>
+                  <option value="0">Tipo de Comunicación </option>
                   <option *ngFor="let list of JsonOutgetlistaTiposDocumentos" value="{{ list.idTipoDocumento }}" > {{ list.descTipoDocumento }}</option>
               </select>
               <small class="form-text text-muted" *ngIf="idTipoDocumento.value == 0 || idTipoDocumento.value == null " >Debes Seleccionar un Tipo de Comunicacion</small>
@@ -280,33 +280,81 @@
       <div class="panel-collapse collapse in" id="comVinculante">
         <!-- Fila para los Datos de Seleccion de Tipo de Comunicacion -->
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12">
-              <div class="panel panel-primary">
-               <div class="panel-body text-center">
-                 <h6 title="Selecciona un Tipo de Comunicación, para Filtrar la Información a Seleccionar" class="text-on-pannel text-primary">
-                   <!-- Seleccion de COmunicacion de Ingreso -->
-                   <strong class="text-uppercase">
-                     <label class="custom-control custom-checkbox">
-                       <input #saveUserNameCheckBox type="checkbox" name="chkTipoCom" class="custom-control-input chkTipoCom" id="saveUserNameCheckBox"
-                          [checked]="saveUsername" (change)="onSaveUsernameChanged(saveUserNameCheckBox.checked, 1)"  >
-                       <span class="custom-control-indicator"></span>
-                       <span class="custom-control-description">Comunicación de Ingreso</span>
-                       <input style="width:0px;height:0px;color:white" type="text" value="1" name="comIngreso" id="comIngreso" >
-                     </label>
-                   </strong>
+             <!-- Direccion Encargada del tema de la Comunicacion -->
+             <div class="col-xs-12 col-sm-6 col-md-6">
+               <div class="form-group">
+                 <select #idDireccionSreciComVinc="ngModel" class="form-control" name="idDireccionSreciComVinc" id="idDireccionSreciComVinc"
+                       ngControl="idDireccionSreciComVinc" [(ngModel)]="comunicacion.idDireccionSreciComVinc" tabindex="8"
+                          (change)="getlistaSubDireccionesSRECIComVinculante()" >
+                     <option value="0">Sub Secretaría Responsable </option>
+                     <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
+                 </select>
+                 <small class="form-text text-muted" *ngIf="idDireccionSreciComVinc.value == 0 || idDireccionSreciComVinc.value == null " >
+                   Debes Seleccionar una Sub Secretaría vinculante</small>
+                 <!-- <small class="form-text text-muted" *ngIf="idDireccionSreciComVinc.errors?.required" >Debes Seleccionar una Sub Secretaría responsable</small> -->
+               </div>
+            </div>
 
-                   <!-- Seleccion de COmunicacion de Salida -->
-                   <strong class="text-uppercase">
-                     <label class="custom-control custom-checkbox">
-                       <input type="checkbox" name="chkTipoCom" class="custom-control-input chkTipoCom">
-                       <span class="custom-control-indicator"></span>
-                       <span class="custom-control-description">Comunicación de Salida</span>
-                       <input style="width:0px;height:0px;color:white" type="text" value="2" name="comSalida" id="comSalida" >
-                     </label>
-                   </strong>
-                 </h6>
+            <!-- SubDireccion Encargada del tema de la Comunicacion -->
+            <div class="col-xs-12 col-sm-6 col-md-6">
+              <div class="form-group">
+                <select #idDeptoFuncionalComVinc="ngModel" class="form-control" name="idDeptoFuncionalComVinc" id="idDeptoFuncionalComVinc"
+                      ngControl="idDeptoFuncionalComVinc" [(ngModel)]="comunicacion.idDeptoFuncionalComVinc" tabindex="9" >
+                    <option value="0">Dirección Responsable</option>
+                    <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECIComVinculantes" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
+                </select>
+                <small class="form-text text-muted" *ngIf="idDeptoFuncionalComVinc.value == 0 || idDeptoFuncionalComVinc.value == null " >
+                  Debes Seleccionar una Dirección vinculante</small>
+                <!-- <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Dirección responsable</small> -->
               </div>
-             </div>
+            </div>
+        </div>
+
+
+        <!-- Fila de Tipo de Comunicaciones -->
+        <div class="row">
+            <!-- Tipo de Comunicacion -->
+            <div class="col-xs-12 col-sm-6 col-md-6">
+              <div class="form-group">
+                <select #idTipoDocumentoComVinc="ngModel" class="form-control" name="idTipoDocumentoComVinc"
+                      ngControl="idTipoDocumentoComVinc" [(ngModel)]="comunicacion.idTipoDocumentoComVinc"  >
+                    <option value="0">Tipo de Comunicación</option>
+                    <option *ngFor="let list of JsonOutgetlistaTiposDocumentos" value="{{ list.idTipoDocumento }}" > {{ list.descTipoDocumento }}</option>
+                </select>
+                <small class="form-text text-muted" *ngIf="idTipoDocumentoComVinc.value == 0 || idTipoDocumentoComVinc.value == null " >Debes Seleccionar un Tipo de Comunicacion</small>
+                <!-- <small class="form-text text-muted" *ngIf="idTipoDocumento.errors?.required" >Debes Seleccionar un Tipo de Comunicacion</small> -->
+              </div>
+           </div>
+
+
+           <div class="col-xs-12 col-sm-6 col-md-6">
+               <div class="panel panel-primary">
+                  <div class="panel-body text-center">
+                    <h6 title="Selecciona un Tipo de Comunicación, para Filtrar la Información a Seleccionar" class="text-on-pannel text-primary">
+                      <!-- Seleccion de COmunicacion de Ingreso -->
+                      <!-- Comunicacion de Ingreso -->
+                      <label class="custom-control custom-radio">
+                         <input id="radio1" name="radio" type="radio" class="custom-control-input fakeRadio" (change)="getlistaComunicacionVinculanteAll(1)">
+                         <span class="custom-control-indicator"></span>
+                         <span class="custom-control-description">Ingreso Com.</span>
+                      </label>
+
+                      <!-- Comunicacion de Salida -->
+                      <label class="custom-control custom-radio">
+                         <input id="radio2" name="radio" type="radio" class="custom-control-input fakeRadio" (change)="getlistaComunicacionVinculanteAll(2)">
+                         <span class="custom-control-indicator"></span>
+                         <span class="custom-control-description">Salida Com.</span>
+                      </label>
+
+                      <!-- Ambas opciones -->
+                      <label class="custom-control custom-radio">
+                         <input id="radio3" name="radio" type="radio" class="custom-control-input fakeRadio" (change)="getlistaComunicacionVinculanteAll(3)">
+                         <span class="custom-control-indicator"></span>
+                         <span class="custom-control-description">Ambas Com.</span>
+                      </label>
+                    </h6>
+                  </div>
+              </div>
             </div>
         </div>
 
@@ -367,7 +415,7 @@
             <div class="row">
 
             <!-- Observaciones de la Ingreso de Comunicacion -->
-            <div class="col-xs-12 col-sm-6 col-md-12">
+            <div class="col-xs-12 col-sm-12 col-md-12">
               <div class="form-group">
                   <textarea #observaciones="ngModel" class="form-control" id="observaciones" name="observaciones" rows="3"
                       placeholder="Ingresa la Observacion / Instruccion" tabindex="3" minlength="10"
@@ -378,17 +426,17 @@
 
 
             <!-- Subir PDF del Oficio entrante -->
-            <div class="col-xs-12 col-sm-6 col-md-12">
+            <div class="col-xs-12 col-sm-12 col-md-12">
               <div class="form-group" id="fileIn">
                   <div id="contFile">
-                    <label for="exampleInputFile">Agregar Documentos</label>
-                    <input #pdfDocumento="ngModel" type="file" class="form-control-file" id="pdfDocumento" name="pdfDocumento[]"
-                         ngControl="pdfDocumento" [(ngModel)]="comunicacion.pdfDocumento"  placeholder="Subir Pdf ..."
-                         aria-describedby="fileHelp" (change)="fileChangeEvent($event)">
-
-                     <small  id="fileHelp" class="form-text text-muted">Esta seccion sirve, para ingresar un pdf, imagen etc desde su equipo local y asignarlo a la comunicacion.</small>
+                    <label class="custom-file">
+                      <input #pdfDocumento="ngModel" type="file" class="form-control-file" id="pdfDocumento" name="pdfDocumento[]"
+                           ngControl="pdfDocumento" [(ngModel)]="comunicacion.pdfDocumento"  placeholder="Subir Pdf ..."
+                           aria-describedby="fileHelp" (change)="fileChangeEvent($event)">
+                       <span class="custom-file-control"></span>
+                     </label>
                   </div>
-
+                  <small  id="fileHelp" class="form-text text-muted">Esta seccion sirve, para ingresar un pdf, imagen etc desde su equipo local y asignarlo a la comunicacion.</small>
                 </div>
                 <!-- Barra de Progreso de Carga de la Imagen -->
                 <div class="progress">
@@ -436,11 +484,6 @@
                       </tr>
                   </tbody>
                 </table>
-
-                <!-- <button type="button" name="button" (click)="createNewFileInput()">Agregar Nuevo</button> -->
-                <!-- <button type="button" name="button" id="btnDeleteDoc" (click)="deleteItemTable()"> Borrar</button> -->
-                <!-- <input type="text" name="" id="idDocumentoDel" disabled  value="" class="form-control input-lg"> -->
-                <!-- <button type="button" name="button" (click)="checkTodos()">Subir</button> -->
             </div>
 
             <div [innerHTML]="myHtml"></div>
