--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/style.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/style.component.css
@@ -86,3 +86,13 @@ legend.scheduler-border {
 .panel-body {
   padding-top: 30px !important;
 }
+
+
+/* Personalizacion del File Inut */
+.custom-file-control:lang(en)::after {
+  content: "Selecciona el archivo a Subir ...";
+}
+
+.custom-file-control:lang(en)::before {
+  content: "Buscar";
+}
