--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
@@ -327,7 +327,7 @@
                     </h6>
                   </div>
               </div>
-              <!-- <button type="button" (click)="cleanComunicacionVinculante()" class="btn btn-primary btn-sm">Limpiar Filtro</button> -->
+              <button type="button" (click)="cleanComunicacionVinculante()" class="btn btn-primary btn-sm">Limpiar Filtro</button>
             </div>
         </div>
 
