--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.css
@@ -40,3 +40,13 @@
   margin-left: 40%;
   margin-top: 20%
 }
+
+
+/* Personalizacion del File Inut */
+.custom-file-control:lang(en)::after {
+  content: "Selecciona el archivo a Subir ...";
+}
+
+.custom-file-control:lang(en)::before {
+  content: "Buscar";
+}
