--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -355,6 +355,7 @@
                     </h6>
                   </div>
               </div>
+              <button type="button" (click)="cleanComunicacionVinculante()" class="btn btn-primary btn-sm">Limpiar Filtro</button>
             </div>
         </div>
 
@@ -418,7 +419,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12">
               <div class="form-group">
                   <textarea #observaciones="ngModel" class="form-control" id="observaciones" name="observaciones" rows="3"
-                      placeholder="Ingresa la Observacion / Instruccion" tabindex="3" minlength="10"
+                      placeholder="Ingresa la Observación / Instrucción" tabindex="3" minlength="10"
                       ngControl="observaciones" [(ngModel)]="comunicacion.observaciones"></textarea>
                   <small class="form-text text-muted" *ngIf="observaciones.errors?.minlength" >Se nesesita por lo menos {{ observaciones.errors.minlength.requiredLength }} caracteres</small>
               </div>
